--- a/Junseung/class1/index.html
+++ b/Junseung/class1/index.html
@@ -17,10 +17,21 @@
         class LikeButton extends React.Component {
             constructor(props){
                 super(props);
+                this.state = {
+                    liked: false,
+                };
             }
 
             render(){
-                return e('button', null, "Like"); // <button> Like </button>
+                return e(
+                    'button', 
+                    { onClick: () => { 
+                        this.state.liked === true 
+                        ? this.setState( { liked : false } ) 
+                        : this.setState( { liked : true } )
+                        }, type: 'submit' 
+                    } , 
+                    (this.state.liked === true) ? "구독 취소" : "구독" ); // <button> Like or Liked </button>
             }
         }
     </script>
