--- a/Junseung/class1/index.html
+++ b/Junseung/class1/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <title>구구단 만들기</title>
 </head>
 <body>
     <h1>간단한 구구단 만들기</h1>
     <div id = "root"></div>
 
-    <script>
-        const e = React.createElement;
-
+    <script type = "text/babel">
         class LikeButton extends React.Component {
             constructor(props){
                 super(props);
@@ -23,20 +21,24 @@
             }
 
             render(){
-                return e(
-                    'button', 
-                    { onClick: () => { 
-                        this.state.liked === true 
-                        ? this.setState( { liked : false } ) 
+                return ( 
+                    <button type = "submit" onClick = {() => {
+                        (this.state.liked === true)
+                        ? this.setState( { liked : false } )
                         : this.setState( { liked : true } )
-                        }, type: 'submit' 
-                    } , 
-                    (this.state.liked === true) ? "구독 취소" : "구독" ); // <button> Like or Liked </button>
+                    }}>
+                    {
+                        (this.state.liked === true)
+                        ? "구독 취소"
+                        : "구독"
+                    }
+                    </button>
+                )
             }
         }
     </script>
-    <script>
-        ReactDOM.render(e(LikeButton), document.querySelector('#root'));
+    <script type = "text/babel">
+        ReactDOM.render(<LikeButton></LikeButton>, document.querySelector('#root'));
     </script>    
 </body>
 </html>
